# obs-split-screen

./: CMakeLists.txt  LICENSE  README.md  resource.rc.in  split-screen.c  split-screen.h
data/locale/: en-US.ini
